--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -1,15 +1,12 @@
 .gallery {
-    -webkit-column-count: 3;
-    -moz-column-count: 3;
-    column-count: 3;
-    -webkit-column-width: 33%;
-    -moz-column-width: 33%;
-    column-width: 33%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 16px;
     padding: 0 12px;
 }
 
 .gallery .pics {
-    -webkit-transition: all 350ms ease;
+    /* -webkit-transition: all 350ms ease; */
     transition: all 350ms ease;
     cursor: pointer;
     margin-bottom: 12px;
@@ -21,20 +18,13 @@
 
 @media (max-width: 991px) {
     .gallery {
-        -webkit-column-count: 2;
-        -moz-column-count: 2;
-        column-count: 2;
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
 @media (max-width: 480px) {
     .gallery {
-        -webkit-column-count: 1;
-        -moz-column-count: 1;
-        column-count: 1;
-        -webkit-column-width: 100%;
-        -moz-column-width: 100%;
-        column-width: 100%;
+        grid-template-columns: 1fr;
     }
 }
 
